# openvpn3-linux

./: QUICK-START.md  meson.build  meson_options.txt
.github/workflows/: build.yml  lin-build.yml
addons/devposture/: openvpn3-service-devposture.cpp
distro/systemd/: meson.build  openvpn3-autoload.service.in  openvpn3-session@.service.in  openvpn3-systemd
docs/: debugging.md
docs/man/: meson.build  openvpn3-admin-journal.8.rst  openvpn3-desktop-session-watcher.1.rst
src/client/: backend-signals.hpp  core-client-netcfg.hpp  core-client.hpp  meson.build  openvpn3-service-backendstart.cpp  openvpn3-service-client.cpp  proxy-devposture.hpp  statistics.hpp
src/common/: cmdargparser.cpp  cmdargparser.hpp  configfileparser.cpp  configfileparser.hpp  core-extensions.hpp  lookup.hpp  machineid.hpp  platforminfo.cpp  platforminfo.hpp  requiresqueue.cpp  requiresqueue.hpp  utils.cpp  utils.hpp
src/configmgr/: configmgr-configuration.cpp  configmgr-configuration.hpp  configmgr-events.cpp  configmgr-events.hpp  configmgr-service.cpp  configmgr-service.hpp  configmgr-signals.cpp  configmgr-signals.hpp  meson.build  openvpn3-service-configmgr.cpp  overrides.hpp  proxy-configmgr.hpp
src/dbus/: constants.hpp  gen-c-constants.cpp  meson.build  object-ownership.cpp  path.cpp  path.hpp  support-functions.cpp  support-functions.hpp
src/events/: attention-req.cpp  attention-req.hpp  log.cpp  log.hpp  status.cpp  status.hpp
src/log/: ansicolours.hpp  (+17 more)
src/python/session-watcher/: meson.build  openvpn3-desktop-session-watcher.py  openvpn3-desktop-session-watcher.service.in
(+92 files in other folders)
